# QuantumSpaceOS-main

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
config/: bootloader.conf  grub.cfg  mkinitcpio.conf  pacman.conf  quantum.conf  quantumspace-gui.service  quantumspace-telemetry.service  wayland.conf
docs/: ARCHITECTURE.md  FLIGHT_SIM.md  QUANTUM_CORE.md  TELEMETRY_API.md
scripts/: build_iso.ps1  build_iso.sh  run_qemu.ps1  run_qemu.sh  setup_dev.sh
src/api/: __init__.py  models.py  quantum_client.py  requirements.txt  routes.py  telemetry_api.py
src/flight-sim/: Cargo.toml  README.md
src/flight-sim/src/: atmospheric_entry.rs  attitude_control.rs  main.rs  orbital_mechanics.rs  thrust_vectoring.rs
src/photonicq-bridge/: Cargo.toml  README.md
src/photonicq-bridge/src/: channel.rs  decoder.rs  encoder.rs  entanglement.rs  error.rs  lib.rs
src/quantum-core/: Cargo.toml  README.md
src/quantum-core/src/: algorithms.rs  error.rs  gates.rs  lib.rs  qubit.rs  state_vector.rs
src/wayland-gui/: Cargo.toml  README.md
src/wayland-gui/src/: main.rs  orbital_view.rs  quantum_visualizer.rs  telemetry.rs
tests/: flight_tests.py  integration_tests.sh  quantum_tests.rs
