[package]
name = "flight-sim"
version = "0.1.0"
edition = "2021"
description = "Flight simulation: orbital mechanics, thrust vectoring, atmospheric entry, attitude control"
authors = ["Giovanny Corpus Bernal <giovanny.corpus@example.com>"]
license = "MIT"
repository = "https://github.com/GioCorpus/QuantumSpaceOS"

[[bin]]
name = "flight-sim"
path = "src/main.rs"

[dependencies]
# Math and physics
nalgebra = "0.32"
uom = { version = "0.33", features = ["f64"] }
approx = "0.5"

# Time handling
chrono = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-app = "0.2"

# Quantum integration
quantum-core = { path = "../quantum-core" }
photonicq-bridge = { path = "../photonicq-bridge" }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"
