[package]
name = "photonicq-bridge"
version = "0.1.0"
edition = "2021"
description = "Photonic-Quantum bridge for high-speed quantum communication"
authors = ["Giovanny Corpus Bernal <giovanny.corpus@example.com>"]
license = "MIT"
repository = "https://github.com/GioCorpus/QuantumSpaceOS"

[dependencies]
# Quantum simulation
num-complex = "0.4"
rand = "0.8"
# Photonic networking
tokio = { version = "1", features = ["full"] }
tungstenite = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Signal processing
ndarray = "0.15"
# Error handling
thiserror = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Physics constants
uom = { version = "0.33", features = ["f64"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "photon_throughput"
harness = false
